--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "cted-express-generator",
-  "description": "CTED application generator",
+  "name": "aa-express-generator",
+  "description": "My Custom Node + Vue application generator",
   "version": "4.16.0",
-  "author": "TJ Holowaychuk <tj@vision-media.ca>",
+  "author": "afshan.aman@gmail.com",
+  "original_author": "TJ Holowaychuk <tj@vision-media.ca>",
   "contributors": [
     "Aaron Heckmann <aaron.heckmann+github@gmail.com>",
     "Ciaran Jessup <ciaranj@gmail.com>",
@@ -36,7 +37,7 @@
   "main": "bin/express-cli.js",
   "preferGlobal": true,
   "bin": {
-    "cted-express": "./bin/express-cli.js"
+    "aa-express": "./bin/express-cli.js"
   },
   "devDependencies": {
     "eslint": "4.18.2",
